--- a/Nettside/Views/Account/Login.cshtml
+++ b/Nettside/Views/Account/Login.cshtml
@@ -2,7 +2,7 @@
 @model LoginViewModel
 
 @{
-    ViewBag.Title = "Log in";
+    ViewBag.Title = "Logg inn";
 }
 <div class="navbar navbar-inverse navbar-fixed-top">
 </div>
@@ -11,7 +11,7 @@
 <div class="row">
     <div class="col-md-8">
         <section id="loginForm">
-            @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+            @using (Html.BeginForm("Logg inn", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
                 @Html.AntiForgeryToken()
                 <h4>Login</h4>
@@ -41,7 +41,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Log in" class="btn btn-default" />
+                        <input type="submit" value="Logg inn" class="btn btn-default" />
                     </div>
                 </div>
                 @* Enable this once you have account confirmation enabled for password reset functionality
