--- a/Nettside/Views/Home/Index.cshtml
+++ b/Nettside/Views/Home/Index.cshtml
@@ -41,25 +41,22 @@
         Temperaturen er nå <p id="temp"><strong>@(ViewBag.temperature + "°C")</strong></p>
         <b> <font color="red">@ViewBag.alarm</font> </b>
 
-        <h3>Varslings grenser</h3>
-        <form id="alarm" action="@Url.Action("UpdateAlarmLimits", "Home")" method="post">
+        <h3>Varslingsgrenser</h3>
+        <form id="alarm" action="@Url.Action("UpdateSettings", "Home")" method="post">
             <label>Øvre grense: </label>
-            <input type="number" id="txtAlarmUpperLimit" value="@ViewBag.highAlarm" name="upperLimit" step="0.1" /> <br />
+            <input type="number" id="txtAlarmUpperLimit" value="@ViewBag.highAlarm" name="aUpperLimit" step="0.1" /> <br />
             <label>Nedre grense: </label>
-            <input type="number" id="txtAlarmLowerLimit" value="@ViewBag.lowAlarm" name="lowerLimit" step="0.1" /> <br />
-            <label>Oppdaterings interval: </label>
+            <input type="number" id="txtAlarmLowerLimit" value="@ViewBag.lowAlarm" name="aLowerLimit" step="0.1" /> <br />
+            <label>Oppdateringsinterval: </label>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="number" id="txtUpdateInterval" value="@ViewBag.updateInterval" name="updateInterval" step="1" min="1" />min. <br />
-            <input type="submit" id="btnFurnaceLimit" value="Oppdater grenser" step="0.1" /> <br />
-        </form>
 
-        <h3>Ovn styring</h3>
-        <form id="frmFurnace" method="post" action="@Url.Action("UpdateFurnaceLimits", "Home")">
+            <h3>Ovn styring</h3>
             <label>Øvre grense: </label>
-            <input type="number" id="txtFurnaceUpperLimit" name="upperLimit" value="@ViewBag.furnaceHigh" step="0.1" /> <br />
+            <input type="number" id="txtFurnaceUpperLimit" name="fUpperLimit" value="@ViewBag.furnaceHigh" step="0.1" /> <br />
             <label>Nedre grense: </label>
-            <input type="number" id="txtFurnaceLowerLimit" name="lowerLimit" value="@ViewBag.furnaceLow" step="0.1" /> <br />
+            <input type="number" id="txtFurnaceLowerLimit" name="fLowerLimit" value="@ViewBag.furnaceLow" step="0.1" /> <br />
+            <br />
             <input type="submit" value="Oppdater grenser" />
         </form>
-        <br />
     </center>
 </div>
