--- a/Nettside/Views/Home/Index.cshtml
+++ b/Nettside/Views/Home/Index.cshtml
@@ -19,7 +19,8 @@
             });
             return false;
         }
-        setInterval(updateTemp, 60000); //recheck temp every minute
+
+        setInterval(updateTemp, 60000); //recheck temp every minute dynamically
         updateTemp();
     </script>
 
@@ -46,21 +47,20 @@
         </form>
 
         <h3>Varslingsgrenser</h3>
-        <form id="alarm" action="@Url.Action("UpdateSettings", "Home")" method="post">
+        <form id="settings" action='@Url.Action("UpdateSettings", "Home")' method="post">
             <label>Øvre grense: </label>
-            <input type="number" id="txtAlarmUpperLimit" value="@Model.alarm.upperLimit" name="aUpperLimit" step="0.1" required/> <br />
-            <label>Nedre grense: </label>
-            <input type="number" id="txtAlarmLowerLimit" value="@Model.alarm.lowerLimit" name="aLowerLimit" step="0.1" required /> <br />
-            <label>Oppdateringsinterval: </label>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="number" id="txtUpdateInterval" value="@Model.updateInterval" name="updateInterval" step="1" min="1" required />min. <br />
-
-            <h3>Ovn styring</h3>
+            <input type="number" id="txtAlarmUpperLimit" value="@Model.alarm.upperLimit" name="aUpperLimit" step="0.1" required />
+            <br /> <label>Nedre grense: </label>
+            <input type="number" id="txtAlarmLowerLimit" value="@Model.alarm.lowerLimit" name="aLowerLimit" step="0.1" required />
+            <br /> <label>Oppdateringsinterval: </label>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="number" id="txtUpdateInterval" value="@Model.updateInterval" name="updateInterval" step="1" min="1" required />min.
+            <br /> <h3>Ovn styring</h3>
             <label>Øvre grense: </label>
-            <input type="number" id="txtFurnaceUpperLimit" name="fUpperLimit" value="@Model.furnace.upperLimit" step="0.1" required /> <br />
-            <label>Nedre grense: </label>
-            <input type="number" id="txtFurnaceLowerLimit" name="fLowerLimit" value="@Model.furnace.lowerLimit" step="0.1" required /> <br />
+            <input type="number" id="txtFurnaceUpperLimit" name="fUpperLimit" value="@Model.furnace.upperLimit" step="0.1" required />
+            <br /> <label>Nedre grense: </label>
+            <input type="number" id="txtFurnaceLowerLimit" name="fLowerLimit" value="@Model.furnace.lowerLimit" step="0.1" required />
             <br />
-            <input type="submit" value="Oppdater grenser" />
+            <br /> <input type="submit" value="Oppdater grenser"/>
         </form>
     </center>
 </div>
