--- a/Nettside/Views/Home/Index.cshtml
+++ b/Nettside/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿<head>
+﻿@using WebApplication6.Models;
+@model HomeViewModel
+<head>
      <Title>
         ""
      </Title>
@@ -20,6 +22,10 @@
             return false;
         }
 
+        function validate() {
+            return false;
+        }
+
         setInterval(updateTemp, 60000); //recheck temp every minute dynamically
         updateTemp();
     </script>
@@ -30,9 +36,12 @@
             text-align: center;
         }
 
-        .container label {
+        .container control-label {
             display: table-row;
+            text-align: center;
         }
+
+
     </style>
 </head>
 
@@ -40,27 +49,35 @@
 <div class="container">
     <center>
         Temperaturen er nå <p id="temp"><strong>@(Model.temperature + "°C")</strong></p>
-        <form id='alarm' action='@Url.Action("SignAlarm", "Home")' method='post' hidden='@Model.alarm.hide'>
-            <b> <font color="red">@Model.alarm.message </font> </b><br hidden="@Model.alarm.hide" />
-            <input type="hidden" name="id" value="@Model.alarm.id"/>
-            <input type='submit' value='Kvitèr alarm' hidden="@Model.alarm.hide" />
-        </form>
+        @using (Html.BeginForm("SignAlarm", "Home", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" })) {
+            <b> <font color="red">@Model.alarmMessage </font> </b><br @Model.alarmHide />
+            @Html.HiddenFor(m => m.AlarmId, new { @id="AlarmId" })
+            <input type='submit' value='Kvitèr alarm' @Model.alarmHide />
+        }
 
-        <h3>Varslingsgrenser</h3>
-        <form id="settings" action='@Url.Action("UpdateSettings", "Home")' method="post">
-            <label>Øvre grense: </label>
-            <input type="number" id="txtAlarmUpperLimit" value="@Model.alarm.upperLimit" name="aUpperLimit" step="0.1" required />
-            <br /> <label>Nedre grense: </label>
-            <input type="number" id="txtAlarmLowerLimit" value="@Model.alarm.lowerLimit" name="aLowerLimit" step="0.1" required />
-            <br /> <label>Oppdateringsinterval: </label>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="number" id="txtUpdateInterval" value="@Model.updateInterval" name="updateInterval" step="1" min="1" required />min.
+        @using (Html.BeginForm("UpdateSettings","Home",new {},FormMethod.Post, new { @class = "form-horizontal", role = "form" })) {
+            <h3>Varslingsgrenser</h3>
+            @Html.LabelFor(m => m.AlarmUpperLimit, new { @class = "control-label" })
+            <br />
+            @Html.TextBoxFor(m => m.AlarmUpperLimit, new { @class = "control", @type="number", @step="0.1" });
+            <br />
+            @Html.LabelFor(m => m.AlarmLowerLimit, new { @class = "control-label" })
+            <br />
+            @Html.TextBoxFor(m => m.AlarmLowerLimit, new { @class = "control", @type="number", @step = "0.1" });
+            <br />
+            @Html.LabelFor(m => m.LogInterval, new { @class = "control-label" })
+            <br />
+            <label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>@Html.TextBoxFor(m => m.LogInterval, new { @class = "control", @type = "number", @step = "1", @min="1" }); <label>min.</label>
             <br /> <h3>Ovn styring</h3>
-            <label>Øvre grense: </label>
-            <input type="number" id="txtFurnaceUpperLimit" name="fUpperLimit" value="@Model.furnace.upperLimit" step="0.1" required />
-            <br /> <label>Nedre grense: </label>
-            <input type="number" id="txtFurnaceLowerLimit" name="fLowerLimit" value="@Model.furnace.lowerLimit" step="0.1" required />
+            @Html.LabelFor(m => m.FurnaceUpperLimit, new { @class = "control-label" })
+            <br />
+            @Html.TextBoxFor(m => m.FurnaceUpperLimit, new { @class = "control", @type="number", @step = "0.1" });
+            <br />
+            @Html.LabelFor(m => m.FurnaceLowerLimit, new { @class = "control-label" })
+            <br />
+            @Html.TextBoxFor(m => m.FurnaceLowerLimit, new { @class = "control", @type="number", @step = "0.1" });
             <br />
             <br /> <input type="submit" value="Oppdater grenser"/>
-        </form>
+        }
     </center>
 </div>
