--- a/Nettside/Views/Shared/_LoginPartial.cshtml
+++ b/Nettside/Views/Shared/_LoginPartial.cshtml
@@ -6,7 +6,7 @@
     @Html.AntiForgeryToken()
 
     <ul class="nav navbar-nav navbar-right">
-        <li><a href="javascript:document.getElementById('logoutForm').submit()">Logg ut: @(User.Identity.GetUserName())</a></li>
+        <li><a href="javascript:document.getElementById('logoutForm').submit()">Logg ut: @(User.Identity.Name)</a></li>
     </ul>
     }
 }
