--- a/Nettside/Views/Account/Login.cshtml
+++ b/Nettside/Views/Account/Login.cshtml
@@ -7,7 +7,7 @@
 <div class="navbar navbar-inverse navbar-fixed-top">
 </div>
 
-<h2>@ViewBag.Title.</h2>
+<h2>@ViewBag.Title</h2>
 <div class="row">
     <div class="col-md-8">
         <section id="loginForm">
