Entirely custom login

--- a/Nettside/Views/Shared/_LoginPartial.cshtml
+++ b/Nettside/Views/Shared/_LoginPartial.cshtml
@@ -1,12 +1,11 @@
-﻿@using Microsoft.AspNet.Identity
-@if (Request.IsAuthenticated)
+﻿@if (Account.User.Authorized)
 {
     using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
     {
     @Html.AntiForgeryToken()
 
     <ul class="nav navbar-nav navbar-right">
-        <li><a href="javascript:document.getElementById('logoutForm').submit()">Logg ut: @(User.Identity.Name)</a></li>
+        <li><a href="javascript:document.getElementById('logoutForm').submit()">Logg ut: @(Account.User.Username)</a></li>
     </ul>
     }
 }
