Comment headers website

--- a/Nettside/Views/Account/Login.cshtml
+++ b/Nettside/Views/Account/Login.cshtml
@@ -1,4 +1,10 @@
-﻿@using WebApplication6.Models
+﻿<!--
+    Written by: Haakon N. Unelsrød
+    Login page. The user will always be redirected here if not logged in.
+-->
+
+
+@using WebApplication6.Models
 @model LoginViewModel
 
 @{
