--- a/Nettside/Views/Home/Error.cshtml
+++ b/Nettside/Views/Home/Error.cshtml
@@ -1,4 +1,9 @@
-﻿@model System.Web.Mvc.HandleErrorInfo
+﻿<!--
+    Written by: Haakon N. Unelsrød
+    Error page. If an error occurs while interacting with the database, the user will be redirected here and the error will be displayed.
+-->
+
+@model System.Web.Mvc.HandleErrorInfo
 
 @{
     ViewBag.Title = "Error";
