--- a/Nettside/Views/Shared/_Layout.cshtml
+++ b/Nettside/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Hovedside", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Logg", "Index", "Logg")</li>
+                    <li>@Html.ActionLink("Logg", "Index", "Log")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
