--- a/Nettside/Views/Account/Login.cshtml
+++ b/Nettside/Views/Account/Login.cshtml
@@ -38,7 +38,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Logg inn" class="btn btn-default" />
+                        <input type="submit" value="Logg in" class="btn btn-default" />
                     </div>
                 </div>
             }
